dsa: mt7530: Lookup phy-mode of GMAC2
Signed-off-by: René van Dorst <opensource@vdorst.com>

--- a/drivers/staging/mt7621-dts/UBNT-ER-e50.dtsi
+++ b/drivers/staging/mt7621-dts/UBNT-ER-e50.dtsi
@@ -130,7 +130,7 @@
 		compatible = "mediatek,eth-mac";
 		mtd-mac-address = <&factory 0x22>;
 		reg = <1>;
-		phy-mode = "rgmii";
+		phy-mode = "rgmii-txid";
 		phy-handle = <&phy4>;
 	};
 */
