--- a/drivers/staging/mt7621-dts/UBNT-ERX-SFP.dts
+++ b/drivers/staging/mt7621-dts/UBNT-ERX-SFP.dts
@@ -105,7 +105,7 @@
 	ports {
 		lan5: port@5 {
 			reg = <5>;
-			label = "lan5";
+			label = "eth5";
 			phy-handle = <&ephy5>;
 			phy-mode = "rgmii-rxid";
 			status = "disabled";
