dts: mt7621: set ephy as port5.
Signed-off-by: René van Dorst <opensource@vdorst.com>

--- a/drivers/staging/mt7621-dts/UBNT-ERX-SFP.dts
+++ b/drivers/staging/mt7621-dts/UBNT-ERX-SFP.dts
@@ -105,10 +105,10 @@
 	ports {
 		lan5: port@5 {
 			reg = <5>;
-			label = "eth5";
+			label = "lan5";
 			phy-handle = <&ephy5>;
 			phy-mode = "rgmii-rxid";
-			status = "disabled";
+			// status = "disabled";
 		};
 	};
 };
