--- a/arch/arm/configs/mt7623n_evb_fwu_defconfig
+++ b/arch/arm/configs/mt7623n_evb_fwu_defconfig
@@ -22,6 +22,7 @@ CONFIG_CGROUP_SCHED=y
 CONFIG_CPUSETS=y
 #some options for docker
 CONFIG_CGROUP_FREEZER=y
+CONFIG_POSIX_MQUEUE=y
 CONFIG_OVERLAY_FS=y
 CONFIG_MEMCG_SWAP=y
 CONFIG_MEMCG_SWAP_ENABLED=y
@@ -127,12 +128,6 @@ CONFIG_IP_PIMSM_V2=y
 CONFIG_UNIX_DIAG=m
 CONFIG_PACKET_DIAG=m
 
-#added for docker
-CONFIG_POSIX_MQUEUE=y
-CONFIG_POSIX_MQUEUE_SYSCTL=y
-CONFIG_HAVE_ARCH_SECCOMP_FILTER=y
-CONFIG_SECCOMP_FILTER=y
-CONFIG_SECCOMP=y
 
 CONFIG_IPV6=m
 CONFIG_NETFILTER=y
@@ -446,16 +441,16 @@ CONFIG_MTK_THERMAL=m
 CONFIG_MTK_EFUSE=m
 
 #HDMI
-#CONFIG_DRM=y
-#CONFIG_DRM_ARM=y
+CONFIG_DRM=y
+CONFIG_DRM_ARM=y
 #CONFIG_DRM_MALI_DISPLAY=y
-#CONFIG_DRM_MEDIATEK=y
-#CONFIG_DRM_MEDIATEK_HDMI=y
-#CONFIG_COMMON_CLK_MT2701_MMSYS=y
-#CONFIG_COMMON_CLK_MT2701_IMGSYS=y
-#CONFIG_COMMON_CLK_MT2701_VDECSYS=y
-#CONFIG_FRAMEBUFFER_CONSOLE=y
-#CONFIG_DRM_FBDEV_EMULATION=y
+CONFIG_DRM_MEDIATEK=y
+CONFIG_DRM_MEDIATEK_HDMI=y
+CONFIG_COMMON_CLK_MT2701_MMSYS=y
+CONFIG_COMMON_CLK_MT2701_IMGSYS=y
+CONFIG_COMMON_CLK_MT2701_VDECSYS=y
+CONFIG_FRAMEBUFFER_CONSOLE=y
+CONFIG_DRM_FBDEV_EMULATION=y
 
 #Sound
 CONFIG_SOUND=y
