mt76: update code
https://github.com/openwrt/mt76/commits/f977a924b8d077835d9efe88a63c478562aeb423

last commit which compiles without errors on 4.19

--- a/drivers/net/wireless/mediatek/mt76_new/Makefile
+++ b/drivers/net/wireless/mediatek/mt76_new/Makefile
@@ -12,9 +12,10 @@ CFLAGS_trace.o := -I$(src)
 CFLAGS_mt76x02_trace.o := -I$(src)
 
 mt76-y := \
-	mmio.o util.o trace.o dma.o mac80211.o debugfs.o eeprom.o tx.o agg-rx.o
+	mmio.o util.o trace.o dma.o mac80211.o debugfs.o eeprom.o \
+	tx.o agg-rx.o mcu.o
 
-mt76-usb-y := usb.o usb_trace.o usb_mcu.o
+mt76-usb-y := usb.o usb_trace.o
 
 mt76x02-lib-y := mt76x02_util.o mt76x02_mac.o mt76x02_mcu.o \
 		 mt76x02_eeprom.o mt76x02_phy.o mt76x02_mmio.o \
