--- a/drivers/net/wireless/mediatek/mt76_new/mt7603/Makefile
+++ b/drivers/net/wireless/mediatek/mt76_new/mt7603/Makefile
@@ -1,3 +1,5 @@
+EXTRA_CFLAGS += -Werror -DCONFIG_MT76_LEDS
+
 CHECK_CC_ENUM_FLAGS = $(NOSTDINC_FLAGS) $(LINUXINCLUDE) $(KBUILD_CPPFLAGS) $(KBUILD_CFLAGS)
 check-cc-enum = $(call try-run, echo "int v = $(1);" | $(CC) -Werror $(CHECK_CC_ENUM_FLAGS) $(2) -c -x c - -o "$$TMP",y,n)
 
